accept transaction uuid from request
