# docs/swagger.json
@@ -34,6 +34,17 @@
                     "payments"
                 ],
                 "summary": "Initiate a Deposit Transaction",
+                "parameters": [
+                    {
+                        "description": "Deposit initiation details",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.DepositRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "302": {
                         "description": "Redirect to PSP payment page",
@@ -41,6 +52,33 @@
                             "type": "object"
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "models.DepositRequest": {
+            "type": "object",
+            "required": [
+                "amount",
+                "currency",
+                "user_id"
+            ],
+            "properties": {
+                "amount": {
+                    "type": "number"
+                },
+                "currency": {
+                    "type": "string"
+                },
+                "payment_method": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
+                },
+                "uuid": {
+                    "type": "string"
                 }
             }
         }
